Fixing issue where UI elements got hidden by embedded flash players or iframes.

--- a/src-gwt/org/opencms/ade/containerpage/client/ui/css/containerpage.css
+++ b/src-gwt/org/opencms/ade/containerpage/client/ui/css/containerpage.css
@@ -50,7 +50,7 @@ div.optionBar{
 	top: 2px;
 	right: 2px;
 	z-index: value("constants.css.zIndexInline");
-	margin: 0;
+	margin: 0 0 2px 0;
 	padding: 0;
 	color: value("constants.css.textColor");
 	font-family: value("constants.css.fontFamily");
