--- a/src-gwt/org/opencms/ade/containerpage/client/ui/css/dragdrop.css
+++ b/src-gwt/org/opencms/ade/containerpage/client/ui/css/dragdrop.css
@@ -14,6 +14,10 @@
 	cursor: pointer;
 }
 
+.dragging iframe{
+	visibility: hidden;
+}
+
 .dragStarted, .dragPlaceholder{}
 
 
